Prevent page from overflowing horizontally on mobile

--- a/src/domain/home/partners/homePartners.module.scss
+++ b/src/domain/home/partners/homePartners.module.scss
@@ -1,3 +1,4 @@
+@import "layout";
 @import "variables";
 
 .wrapper {
@@ -12,8 +13,10 @@
 
     .big {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: $xlargeMargin;
+        @include respond-above(sm) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: $xlargeMargin;
+        }
         margin-bottom: $largeMargin;
         .icon {
             width: 2* $xlargeMargin;
@@ -35,8 +38,9 @@
     }
     .small {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-
+        @include respond-above(sm) {
+            grid-template-columns: repeat(4, 1fr);
+        }
         .icon {
             width: $xlargeMargin;
             height: 0.5 *$xlargeMargin;
